# sycophancy-uncertainty

./: .gitignore  RESEARCH_PLAN.md  pyproject.toml
results/: exp3_probe_by_uncertainty.json  exp3_probe_by_uncertainty_entropy_rank.json  exp3_probe_by_uncertainty_gptoss.json  exp3_probe_by_uncertainty_gptoss_entropy_rank.json  exp4_trajectories.json  exp4_trajectories_gptoss.json  exp5_cross_prediction.json  exp5_cross_prediction_gptoss.json  exp_geometry.json  exp_geometry_gptoss.json  exp_moe_routing.json
scripts/: check_no_letter.py  check_refusal_flip.py  compute_answer_entropy.py  diagnose_gptoss.py  exp2_continuous_uncertainty.py  exp3_probe_by_uncertainty.py  exp4_trajectories.py  exp5_cross_prediction.py  exp_geometry.py  exp_moe_routing.py  exp_steering.py  extract_gptoss.py  extract_pre_thinking.py  generate_gptoss.py  precompute_features.py  precompute_features_gptoss.py  prepare_labeled.py  prepare_labeled_gptoss.py  recompute_qa_stats.py  remove_empty_thinking.py  remove_unparsed.py  run_gptoss_experiments.sh  run_syco_local_shards.sh  show_soft_refusals.py  show_strict_vs_thinking.py  soft_refusal_analysis.py
src/: config.py  datasets.py  evaluate.py  extract.py  generate.py  lib.py  prompts.py
src/probes/: linear.py
