[project]
name = "sycophancy-uncertainty"
version = "0.1.0"
description = "Epistemic Uncertainty as Vulnerability to Sycophancy in Reasoning Models"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "httpx",
    "python-dotenv",
    "tqdm",
    "joblib",
]

[tool.uv]
dev-dependencies = [
    "ipython",
    "jupyter",
]
